<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start_session"
        android:title="@string/start_session"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sessions"
        android:title="@string/sessions"
        android:icon="@android:drawable/ic_menu_recent_history"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_statistics"
        android:title="@string/statistics"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_export"
        android:title="@string/export_csv"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_import"
        android:title="@string/import_csv"
        app:showAsAction="never"/>

</menu>